# sts-agent

./: README.md  pyproject.toml  setup.py
examples/: spire_state.json
sts_agent/: __init__.py  cli.py  coordinator.py  knowledge.py  models.py  profile.py  state_reader.py  web_server.py
sts_agent/agents/: __init__.py  card_agent.py  combat_agent.py  relic_agent.py  route_agent.py  shop_agent.py
sts_agent/web/static/: app.js  index.html  sample_state.json  styles.css
tests/: test_agents.py
