[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-agent"
version = "0.1.0"
description = "A local multi-agent Slay the Spire companion for route, card, combat, relic, and shop decisions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sts-agent = "sts_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sts_agent*"]
